# snkrs_scrap

./: .env.example  Makefile  README.md  pyproject.toml
snkrs_scrap/: app.py
snkrs_scrap/static/: styles.css
snkrs_scrap/templates/: index.html
snkrs_scrap/util/database/: mysql.py
